--- a/sunday/sunday5.css
+++ b/sunday/sunday5.css
@@ -25,7 +25,7 @@
 .box{
 	height: 550px;
 	margin: 0 auto;
-	background-image: url(img/photo10.jpg);
+	background-image: url(img/photo10.JPG);
 	background-size: cover;
 	background-position: center;
 	color: white;
