--- a/sunday/sunday4.css
+++ b/sunday/sunday4.css
@@ -36,7 +36,7 @@
 	margin: 0 auto;
 	margin-top: 30px;
 	margin-left: 60px;
-	background-image: url(img/photo5.jpg); 
+	background-image: url(img/photo5.JPG); 
 	background-size: cover;
 	background-position: center;
 	position: relative;
