--- a/sunday/sunday2.css
+++ b/sunday/sunday2.css
@@ -51,16 +51,16 @@
 
 
 .pic1{
-	background-image: url(img/photo2.jpg);
+	background-image: url(img/photo2.JPG);
 }
 .pic2{
-	background-image: url(img/photo3.jpg);
+	background-image: url(img/photo3.JPG);
 }
 .pic3{
-	background-image: url(img/photo11.jpg);
+	background-image: url(img/photo11.JPG);
 }
 .pic4{
-	background-image: url(img/photo6.jpg);
+	background-image: url(img/photo6.JPG);
 }
 
 .box{
