--- a/sunday/sunday3.css
+++ b/sunday/sunday3.css
@@ -32,7 +32,7 @@
 	height: 300px;
 	margin: 0 auto;
 	margin-top: 30px;
-	background-image: url(img/photo4.jpg);
+	background-image: url(img/photo4.JPG);
 	background-size: cover;
 	background-position: center;
 }
