--- a/sunday/sunday4.css
+++ b/sunday/sunday4.css
@@ -49,7 +49,7 @@
 	margin-top: 30px:
 	margin-right: 30px;
 
-	background-image: url(img/photo9.jpg); 
+	background-image: url(img/photo9.JPG); 
 	background-size: cover;
 	background-position: center;
 	position: absolute;
@@ -63,7 +63,7 @@
 	margin: 0 auto;
 	margin-top: 20px;
 	margin-left: 200px;
-	background-image: url(img/photo13.jpg); 
+	background-image: url(img/photo13.JPG); 
 	background-size: cover;
 	background-position: center;
 	position: absolute;
@@ -75,7 +75,7 @@
 	height: 200px;
 	width: 30%;
 	margin: 0 auto;
-	background-image: url(img/photo7.jpg);
+	background-image: url(img/photo7.JPG);
 	background-size: cover;
 	background-position: center;
 	position: absolute;
